syntax = "proto3";

package baseserver.api.v1;

option go_package = "server/base-server/api/v1;v1";

import "validate/validate.proto";


service ModelDeployService {
  //创建部署任务
  rpc DeployModel (DepRequest) returns (DepReply);
  //停止部署任务
  rpc StopDepModel (StopDepRequest) returns (StopDepReply);
  //删除部署任务
  rpc DeleteDepModel (DeleteDepRequest) returns (DeleteDepReply);
  //服务调用
  rpc ModelServiceInfer (ServiceRequest) returns (ServiceReply);
  //获取部署任务详情
  rpc GetModelDepInfo(DepInfoRequest) returns (DepInfoReply);
  //获取部署任务列表
  rpc ListDepModel(DepListRequest) returns (DepListReply);
  //获取任务事件列表
  rpc ListDepEvent (DepEventListRequest) returns (DepEventListReply);
}

message DepRequest {
  string name = 1[(validate.rules).string = {min_len: 1,max_len: 30}];
  string desc = 2;
  string serviceType = 3;
  string modelFrame = 4;
  string modelId = 5[(validate.rules).string = {min_len: 1}];
  string modelVersion = 6[(validate.rules).string = {min_len: 1}];
  string resourceType = 7;
  string resourceSpecId = 8;
  string userId = 9;
  string workspaceId = 10;
  // 域名，必须http或https开头，满足url的格式
  string domain = 11[(validate.rules).string = {min_len: 1,pattern:"(https?)://[-A-Za-z0-9+&@#/%?=~_|!:,.;]+[-A-Za-z0-9+&@#/%=~_|]"}];
  string resourcePool = 12;
}

message ServiceRequest{
  string  serviceUrl = 1;
  string  contentType = 2;
  ReqData data = 3;
  string userId = 4;
  string workspaceId = 5;
}

message ReqData{
  repeated string ndarray = 1;
}


message ServiceReply{
  string response = 1;
}

message DepInfo {
  string id = 1;      
	string userId = 2;          
	string workspaceId = 3;      
	string name = 4;                      
	string desc = 5;                             
	string modelId = 6;      	                      
	string modelVersion = 7;                          
	string modelName = 8;                     
	string serviceUrl = 9;    					
	string status = 10;
	int64 completedAt = 11;                    
	int64 startedAt = 12;
	string modelFrame = 13;
  int64 runSec = 14;
  int64 createdAt = 15;
  int64 updatedAt = 16;
}


message DepReply {
  string serviceId = 1;
  string serviceUrl = 2;
  string message = 3;
}

message StopDepRequest {
  string id = 1[(validate.rules).string = {min_len: 1}];
  string operation = 2;
}

message StopDepReply {
  int64 stoppedAt = 1;
}

message DeleteDepRequest {
  repeated string jobIds = 1[(validate.rules).repeated.min_items = 1];
  string userId = 2[(validate.rules).string = {min_len: 1}];
}

message DeleteDepReply {
  int64 deletedAt = 1;
}
message DepInfoRequest {
  string id = 1[(validate.rules).string = {min_len: 1}];
}
message DepInfoReply {
  DepInfo depInfo = 1;
}
message DepListRequest {
  int64 pageIndex = 1;
  int64 pageSize = 2;
  string sortBy = 3;
  string orderBy = 4[(validate.rules).string = {in: ["", "asc", "desc"]}];
  int64 createdAtGte = 5;
  int64 createdAtLt = 6;
  string status = 7;
  string searchKey = 8; //name等模糊查找
  string userId = 9;
  string workspaceId =10;
  string userNameLike = 11;
}
message DepListReply {
  int64  totalSize = 1;
  repeated DepInfo depInfos = 2;
}

message DepEventListRequest {
  int64 pageIndex = 1[(validate.rules).int64 = {gte:1}];
  int64 pageSize = 2[(validate.rules).int64 = {gte:1,lt:100}];
  //服务Id
  string id = 3[(validate.rules).string = {min_len: 1}];
  //是否总任务事件
  bool isMain = 4;
}

message DepEventListReply {
  //查询结果总数
  int64  totalSize = 1;
  //任务事件
  repeated DepEvent depEvents = 2;
}

message DepEvent{
  //发生时间
  string timestamp = 1;
  //名称
  string name = 2;
  //原因
  string reason = 3;
  //消息
  string message = 4;
}